--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,6 +64,7 @@ set-option -g status-right "#[fg=color155,bg=default,bright]#(tmux-mem-cpu-load)
 set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
 
 #### COLOUR (Solarized dark)
+set -g default-terminal "screen-256color-bce"
 
 # default statusbar colors
 set-option -g status-style fg=yellow,bg=default #yellow and base02
