--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,7 +64,8 @@ set-option -g status-right "#[fg=color155,bg=default,bright]#(tmux-mem-cpu-load)
 set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
 
 #### COLOUR (Solarized dark)
-set -g default-terminal "screen-256color-bce"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # default statusbar colors
 set-option -g status-style fg=yellow,bg=default #yellow and base02
