--- a/i3/config
+++ b/i3/config
@@ -34,8 +34,6 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-exec_always "setxkbmap -option 'grp:alt_shift_toggle' -layout us,de"
-
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -155,6 +153,10 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 # lock screen
 bindsym $mod+q exec "~/.config/i3/i3lock/lock.sh"
+
+# alt+shift+$num to change keyboard layout
+bindsym Mod1+Shift+1 exec "setxkbmap -layout us"
+bindsym Mod1+Shift+2 exec "setxkbmap -layout de"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
