--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,8 +3,8 @@ set -g prefix C-Space
 bind C-space send-prefix
 
 # clear screen and scrollback buffer on Ctrl+U
-unbind -n C-u
-# bind -n A-l send-keys C-l #\; clear-history
+#unbind -n C-u
+bind l send-keys C-l #\; clear-history
 
 # more history
 set -g history-limit 100000
