--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,24 +59,24 @@ set-option -g status-left ''
 #set-option -g status-left "#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r)#[default]"
 set-option -g status-right-length 140
 set-option -g status-right-style default
-set-option -g status-right "#[fg=color155,bg=default,bright]#(tmux-mem-cpu-load) "
+set-option -g status-right "#[fg=#98bb6c,bg=default,bright]#(tmux-mem-cpu-load) "
 #set-option -ag status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
-set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
+set-option -ag status-right " #[fg=#dcd7ba,bg=default]%a%l:%M:%S %p#[default] #[fg=#7e9cd8]%Y-%m-%d"
 
 #### COLOUR (Solarized dark)
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 # default statusbar colors
-set-option -g status-style fg=yellow,bg=default #yellow and base02
+set-option -g status-style fg="#e6c384",bg=default #yellow and base02
 
 # default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
-set-window-option -g window-status-style dim
+# set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+# set-window-option -g window-status-style dim
 
 # active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-set-window-option -g window-status-current-style bright
+# set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+# set-window-option -g window-status-current-style bright
 
 # pane border
 set-option -g pane-border-style fg=brightgreen #base02
@@ -86,12 +86,12 @@ set-option -g pane-active-border-style fg=brightgreen #base01
 set-option -g message-style fg=brightred,bg=black #orange and base01
 
 # pane number display
-set-option -g display-panes-active-colour brightred #orange
-set-option -g display-panes-colour blue #blue
+# set-option -g display-panes-active-colour brightred #orange
+# set-option -g display-panes-colour blue #blue
 
 # clock
-set-window-option -g clock-mode-colour green #green
+# set-window-option -g clock-mode-colour green #green
 
 # bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+# set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
