--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -68,7 +68,7 @@ window:
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 0.5
+  opacity: 1.0
 
   # Startup Mode (changes require restart)
   #
@@ -119,7 +119,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DejaVu Sans Mono
+    family: UbuntuMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -130,7 +130,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DejaVu Sans Mono
+    family: UbuntuMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -141,7 +141,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DejaVu Sans Mono
+    family: UbuntuMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -152,7 +152,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DejaVu Sans Mono
+    family: UbuntuMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
@@ -186,6 +186,39 @@ font:
 
 # Colors (Tomorrow Night)
 colors:
+# Kanagawa Alacritty Colors
+colors:
+  primary:
+    background: '0x1f1f28'
+    foreground: '0xdcd7ba'
+
+  normal:
+    black:   '0x090618'
+    red:     '0xc34043'
+    green:   '0x76946a'
+    yellow:  '0xc0a36e'
+    blue:    '0x7e9cd8'
+    magenta: '0x957fb8'
+    cyan:    '0x6a9589'
+    white:   '0xc8c093'
+
+  bright:
+    black:   '0x727169'
+    red:     '0xe82424'
+    green:   '0x98bb6c'
+    yellow:  '0xe6c384'
+    blue:    '0x7fb4ca'
+    magenta: '0x938aa9'
+    cyan:    '0x7aa89f'
+    white:   '0xdcd7ba'
+
+  selection:
+    background: '0x2d4f67'
+    foreground: '0xc8c093'
+
+  indexed_colors:
+    - { index: 16, color: '0xffa066' }
+    - { index: 17, color: '0xff5d62' }
   # Default colors
   #primary:
   #  background: '#1d1f21'
