--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,3 +54,4 @@ bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+set-option -g base-index 1
