--- a/i3/config
+++ b/i3/config
@@ -11,6 +11,9 @@
 
 set $mod Mod4
 
+# Picom
+exec_always --no-startup-id picom &
+
 exec --no-startup-id setxkbmap us
 
 # Font for window titles. Will also be used by the bar unless a different font
