--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -185,7 +185,7 @@ font:
 #draw_bold_text_with_bright_colors: false
 
 # Colors (Tomorrow Night)
-colors:
+#colors:
 # Kanagawa Alacritty Colors
 colors:
   primary:
