--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,10 +51,11 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # https://github.com/jrmoulton/tmux-sessionizer
-bind-key -r S new-window "tms"
+#bind-key -r S new-window "tmux-sessionizer"
+bind-key -r S run-shell "~/.local/bin/tmux-sessionizer"
 
 #### COLOUR (Solarized dark)
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+#set -g default-terminal "tmux-256color"
+#set -ag terminal-overrides ",xterm-256color:RGB"
 
 set-option -g base-index 1
