--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,9 +50,7 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# https://github.com/jrmoulton/tmux-sessionizer
-#bind-key -r S new-window "tmux-sessionizer"
-bind-key -r S run-shell "~/.local/bin/tmux-sessionizer"
+bind -r Tab new-window "~/.local/bin/tmux-sessionizer"
 
 #### COLOUR (Solarized dark)
 #set -g default-terminal "tmux-256color"
