--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -48,20 +48,20 @@ TERM = "xterm-256color"
 size = 12.0
 
 [font.bold]
-family = "UbuntuMono Nerd Font Mono"
+family = "VictorMono Nerd Font Mono"
 style = "Bold"
 
 [font.bold_italic]
-family = "UbuntuMono Nerd Font Mono"
-style = "Bold Italic"
+family = "VictorMono Nerd Font Mono"
+style = "Bold Oblique"
 
 [font.italic]
-family = "UbuntuMono Nerd Font Mono"
-style = "Italic"
+family = "VictorMono Nerd Font Mono"
+style = "Medium Oblique"
 
 [font.normal]
-family = "UbuntuMono Nerd Font Mono"
-style = "Regular"
+family = "VictorMono Nerd Font Mono"
+style = "Medium"
 
 [window]
 opacity = 0.85
