update tmux alacritty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,7 +53,7 @@ bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind -r Tab new-window "~/.local/bin/tmux-sessionizer"
 
 #### COLOUR (Solarized dark)
-#set -g default-terminal "tmux-256color"
-#set -ag terminal-overrides ",xterm-256color:RGB"
+if-shell 'test -n "$ALACRITTY_WINDOW_ID"' "set -g default-terminal 'tmux-256color'; set -ag terminal-overrides ',xterm-256color:RGB'"
+
 
 set-option -g base-index 1
