--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,9 @@ unbind C-b
 set -g prefix C-Space
 bind C-space send-prefix
 
+set -g default-shell /opt/homebrew/bin/nu
+set -g default-command "/opt/homebrew/bin/nu --config ~/.config/nu/config.nu --env-config ~/.config/nu/env.nu"
+
 # clear screen and scrollback buffer on Ctrl+U
 #unbind -n C-u
 bind l send-keys C-l #\; clear-history
