--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,7 @@
+[terminal.shell]
+program = "/opt/homebrew/bin/nu"
+args = ["--config", "~/.config/nu/config.nu", "--env-config", "~/.config/nu/env.nu"]
+
 [colors]
 transparent_background_colors = true
 
