--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,8 +2,8 @@ unbind C-b
 set -g prefix C-Space
 bind C-space send-prefix
 
-set -g default-shell /opt/homebrew/bin/nu
-set -g default-command "/opt/homebrew/bin/nu --config ~/.config/nu/config.nu --env-config ~/.config/nu/env.nu"
+set -g default-shell /opt/homebrew/bin/fish
+set -g default-command "/opt/homebrew/bin/fish"
 
 # clear screen and scrollback buffer on Ctrl+U
 #unbind -n C-u
